# neutron-heater

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  CONTRIBUTING.rst  Dockerfile  HACKING.rst  README.rst  ansible.cfg  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tox.yml
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/contributor/: contributing.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
neutron_heater/: __init__.py  conf.py  constants.py  openstack_client.py  os_vif_client.py  shell.py
neutron_heater/tests/: test_neutron_heater.py
playbooks/: clean.yaml  install.yaml  run.yaml
releasenotes/source/: conf.py  index.rst
roles/heater_clean/: README.md
roles/heater_clean/defaults/: main.yml
roles/heater_clean/tasks/: main.yml
roles/heater_install/: README.md
roles/heater_install/defaults/: main.yml
roles/heater_install/tasks/: main.yml
roles/heater_prepare/tasks/: main.yml
roles/heater_run/: README.md
roles/heater_run/defaults/: main.yml
roles/heater_run/tasks/: main.yml
tools/: osp_create_resources.sh
