[metadata]
name = neutron-heater
summary = Simple tool to make load on the Neutron control plane. It's designed to be used only for the testing purpose, e.g. in CI jobs.
description-file =
    README.rst
author = Slawek Kaplonski
author-email = slawek@kaplonski.pl
home-page = https://kaplonski.pl
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    neutron_heater

[entry_points]
console_scripts =
    neutron-heater = neutron_heater.shell:main
